feat: display an agent generating indicator based on the chat store's `isAgentGenerating` state.

--- a/女戦士.html
+++ b/女戦士.html
@@ -43,7 +43,7 @@
         </div>
 
         <section>
-            <h2>まず聞きたい：離脱理由は“戦闘”じゃないんだな？</h2>
+            <h2>まず聞きたい：離脱理由は“戦闘”じゃない？</h2>
 
             <div class="dialogue">
                 <p class="speaker-editor">編集部</p>
