--- a/目次.html
+++ b/目次.html
@@ -80,8 +80,8 @@
             <li><a href="行列代行の闇記事.html">【社会】ダンジョン前の異臭集団「行列代行」の正体</a></li>
             <li><a href="裏賭博場実態記事.html">【密着】八百長発覚！ モンスター賭博の裏側</a></li>
             <li><a href="脱法ポーション記事.html">【警告】飲むと人間をやめる？「美容ポーション」の恐怖</a></li>
-            <li><a href="インタビュー.html">【独占】渦中の人物への直撃インタビュー</a></li>
-            <li><a href="鉄人会事件史/鉄人会幹部襲撃事件.html">【事件】鉄人会幹部襲撃事件の全貌</a></li>
+
+
         </ul>
 
         <h2>情報・データガイド</h2>
@@ -97,22 +97,18 @@
 
         <h2>連載・コラム</h2>
         <ul>
+            <li><a href="芸能.html">【芸能】歌姫の口パク疑惑・地下アイドル密着</a></li>
             <li><a href="魔物の育て方.html">【新連載】魔術師の副業：はじめての「魔物飼育」</a></li>
             <li><a href="ロブロンス.html">ロブロンス冒険譚</a></li>
         </ul>
 
+
         <h2>世界観・設定資料（アーカイブ）</h2>
         <ul>
-            <li><a href="ギルド.html">ギルド勢力解説</a></li>
-            <li><a href="宗教.html">王都の宗教事情</a></li>
-            <li><a href="王都治安維持組織.html">王都治安維持組織の仕組み</a></li>
-            <li><a href="国家と組織/トンファ系マフィア.html">【組織】トンファ系マフィア</a></li>
-            <li><a href="国家と組織/ロプシー.html">【種族】流浪の民ロプシー</a></li>
-            <li><a href="国家と組織/帝国.html">【国家】北方帝国</a></li>
-            <li><a href="国家と組織/聖王国.html">【国家】聖王国</a></li>
-            <li><a href="国家と組織/魔術協会.html">【組織】魔術協会</a></li>
+            <li><a href="鉄人会事件史/オルステッド村封印ダンジョン事件.html">【事件史】オルステッド村封印ダンジョン事件（廃村の真相）</a></li>
             <li><a href="鉄人会事件史/王都南西地区スアリッジホテル事件.html">【事件史】スアリッジホテル事件</a></li>
             <li><a href="鉄人会事件史/荒くれパーティー羅睺星（らごうせい）事件.html">【事件史】荒くれパーティー羅睺星事件</a></li>
+            <li><a href="鉄人会事件史/鉄人会幹部襲撃事件.html">【事件】鉄人会幹部襲撃事件の全貌</a></li>
         </ul>
     </article>
 </body>
