feat: Refine chat message action button disabling logic to only enable edit for the last user message and regenerate for the last message.

--- a/目次.html
+++ b/目次.html
@@ -80,9 +80,6 @@
             <li><a href="行列代行の闇記事.html">【社会】ダンジョン前の異臭集団「行列代行」の正体</a></li>
             <li><a href="裏賭博場実態記事.html">【密着】八百長発覚！ モンスター賭博の裏側</a></li>
             <li><a href="脱法ポーション記事.html">【警告】飲むと人間をやめる？「美容ポーション」の恐怖</a></li>
-
-
-
             <li><a href="女戦士.html">【特集】戦う女性たち ～女戦士のリアル～</a></li>
         </ul>
 
@@ -93,13 +90,12 @@
             <li><a href="違法アーティファクトカタログ記事.html">絶対に入手してはいけない「違法アーティファクト」カタログ</a></li>
             <li><a href="武器屋春雨.html">武器屋春雨の新商品「スケルトン・バスター」</a></li>
             <li><a href="あやしさ満天堂.html">あやしさ満天堂 商品レビュー</a></li>
-
         </ul>
 
         <h2>連載・コラム</h2>
         <ul>
             <li><a href="魔物の育て方.html">【新連載】魔術師の副業：はじめての「魔物飼育」</a></li>
-            <li><a href="ロブロンス.html">ロブロンス冒険譚</a></li>
+            <li><a href="ロブロンス.html">ロブロンス--「英雄」の黄昏--</a></li>
         </ul>
 
 
