--- a/202603/女戦士.html
+++ b/202603/女戦士.html
@@ -19,7 +19,7 @@
 
         <div class="lead-block">
             <p>
-                王都の英雄譚に必ず出てくる名前――トップギルド《天耀（てんよう）の白鴉》。<br>
+                王都の英雄譚に必ず出てくる名前――トップギルド《天耀（てんよう）》の筆頭パーティー《白鴉（しろがらす）》。<br>
                 だが本誌が追うのは“英雄”ではない。<strong>英雄の踏み台にされた側</strong>だ。
             </p>
             <p>
