--- a/202603/目次.html
+++ b/202603/目次.html
@@ -85,7 +85,7 @@
 
         <h2>情報・データガイド</h2>
         <ul>
-            <li><a href="王都の名物ダンジョン一覧.html">王都周辺・名物ダンジョンガイド 2026</a></li>
+            <li><a href="名物ダンジョン記事.html">【女子旅】今週末行きたい！ 映え＆稼げるダンジョン4選<span class="new-tag">NEW!</span></a></li>
             <li><a href="闘技場の名選手名鑑.html">ドーム・シティ 闘技場名選手名鑑</a></li>
             <li><a href="違法アーティファクトカタログ記事.html">絶対に入手してはいけない「違法アーティファクト」カタログ</a></li>
             <li><a href="武器屋春雨.html">武器屋春雨の新商品「スケルトン・バスター」</a></li>
