docs: Update `prompts.md` to reflect current prompt configurations.

--- a/202603/名物ダンジョン記事.html
+++ b/202603/名物ダンジョン記事.html
@@ -168,8 +168,7 @@
         <div class="dungeon-card">
             <h2>1. まるで宝石箱！ デートならココ一択</h2>
             <!-- Image Placeholder: Crystal Palace -->
-            <img src="assets/crystal_palace.png" alt="クリスタル・パレス" class="dungeon-img"
-                onerror="this.src='https://placehold.co/600x400?text=Crystal+Palace';">
+            <img src="クリスタルパレス.png" alt="クリスタル・パレス" class="dungeon-img">
             <div class="dungeon-content">
                 <span class="tag badge-date">デート</span> <span class="tag">北エリア</span>
                 <h3>クリスタル・パレス</h3>
@@ -191,8 +190,7 @@
         <div class="dungeon-card">
             <h2>2. 山ガール必見！ 絶景とハイキング</h2>
             <!-- Image Placeholder: Beginner's Cave -->
-            <img src="assets/beginners_cave.png" alt="はじまりの洞窟（改）" class="dungeon-img"
-                onerror="this.src='https://placehold.co/600x400?text=Beginners+Cave';">
+            <img src="はじまりの洞窟.png" alt="はじまりの洞窟（改）" class="dungeon-img">
             <div class="dungeon-content">
                 <span class="tag badge-recommend">初心者OK</span> <span class="tag">南エリア</span>
                 <h3>はじまりの洞窟（改）</h3>
@@ -213,8 +211,7 @@
         <div class="dungeon-card">
             <h2>3. ちょっとワルいのがカッコいい？ 一攫千金の鉄板</h2>
             <!-- Image Placeholder: Iron Plate Maze -->
-            <img src="assets/iron_maze.png" alt="鉄板迷宮" class="dungeon-img"
-                onerror="this.src='https://placehold.co/600x400?text=Iron+Maze';">
+            <img src="鉄板迷宮.png" alt="鉄板迷宮" class="dungeon-img">
             <div class="dungeon-content">
                 <span class="tag badge-money">金策</span> <span class="tag">西エリア</span>
                 <h3>鉄板迷宮</h3>
@@ -235,8 +232,7 @@
         <div class="dungeon-card">
             <h2>4. まさに天空の楽園！ 憧れのVIPリゾート</h2>
             <!-- Image Placeholder: Sanctuary Eden -->
-            <img src="assets/sanctuary_eden.png" alt="聖域エデン" class="dungeon-img"
-                onerror="this.src='https://placehold.co/600x400?text=Sanctuary+Eden';">
+            <img src="エデン.png" alt="聖域エデン" class="dungeon-img">
             <div class="dungeon-content">
                 <span class="tag badge-resort">VIP</span> <span class="tag">王都上空</span>
                 <h3>天空リゾート『聖域エデン』</h3>
