--- a/202603/女戦士.html
+++ b/202603/女戦士.html
@@ -33,7 +33,7 @@
         </div>
 
         <figure>
-            <img src="onnasenshi01.png" alt="取材に応じるミラ氏">
+            <img src="女戦士.png" alt="取材に応じるミラ氏">
             <figcaption>▲「最強の作り方が汚い」と語るミラ氏（仮名）</figcaption>
         </figure>
 
