--- a/202603/現役騎士の犯罪記事.html
+++ b/202603/現役騎士の犯罪記事.html
@@ -17,6 +17,11 @@
         <p><strong>「騎士崩れ（野盗化した元騎士）」の犯罪は、悲しいかな珍しい話ではない。主家を失い、食い扶持を稼ぐために剣を悪用する……。だが、今回発覚した事件は、それとは次元が違う。</strong>
             <strong>襲撃者の鎧には、はっきりと「王家の紋章」が刻まれていたのだ。</strong>
         </p>
+
+        <figure>
+            <img src="犯罪騎士.png" alt="犯罪騎士">
+        </figure>
+
         <hr>
         <h2>完璧すぎた襲撃計画</h2>
         <p>事件は先月、王都と北方の交易都市を結ぶ「黄金街道」で起きた。
@@ -29,7 +34,7 @@
         <p>「安全確認」という名目の下、彼らは「獲物の選別」を行っていたのではないか。
             さらに衝撃的な証言がある。襲撃者の一人が剣を振るった際、その特徴的な構えが、第四小隊長が得意とする流派「王宮式・改」と酷似していたというのだ。</p>
         <h2>「守る者」が「狩る者」へ</h2>
-        <p>これまでの「騎士による犯罪」は、あくまで地位を失った者たちの犯行だった。
+        <p>これまでの「騎士による犯罪」は、あくまで地位を失った者たち、いわゆる「騎士団くずれ」の犯行であると相場が決まっていた。
             しかし今回は、現役の騎士が、騎士としての権限と情報を利用して強盗を行っている疑いが濃厚だ。
             彼らは昼間は「正義の味方」として市民に微笑みかけ、夜になると「仮面」をつけて同じ市民を襲う。</p>
         <p>内部告発によれば、奪った金品は小隊全体で分配され、上官への賄賂としても使われているという。
