--- a/202603/聖女泥酔スクープ記事.html
+++ b/202603/聖女泥酔スクープ記事.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>【激写】「清廉の聖女」エイラ様、路地裏で泥酔・路上寝の醜態！ 慌てる側近の悲鳴も虚しく…</title>
+    <title>【激写・本誌独占】「清廉の聖女」エイラ様、路地裏で泥酔・路上寝の醜態！ 吐瀉物にまみれた"聖なる"一夜</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,32 +12,116 @@
     <article>
         <header>
             <span class="scoop-tag">記事</span>
-            <h1>【激写】「清廉の聖女」エイラ様、路地裏で泥酔・路上寝の醜態！ 慌てる側近の悲鳴も虚しく…</h1>
+            <h1>【激写・本誌独占】「清廉の聖女」エイラ様、路地裏で泥酔・路上寝の醜態！ 吐瀉物にまみれた"聖なる"一夜</h1>
         </header>
-        <p><strong>国民の癒やしであり、「清貧と貞淑の象徴」として崇められる聖女エイラ（19）。</strong>
-            <strong>しかし本誌は、彼女の”裏の顔”を捉えた衝撃的な一枚を入手した。そこには、神聖な法衣を涙と吐瀉物で汚し、路地裏で大の字に転がる彼女の姿があった。</strong>
+        <p><strong>国民の9割が信奉し、「歩く浄化槽」「清貧と貞淑の擬人化」とまで謳われる聖女エイラ（19）。</strong>
+            <strong>しかし本誌は、その神聖なヴェールを容赦なく剥ぎ取る、衝撃的すぎる瞬間を捉えた。深夜の路地裏、安酒と汚物にまみれて大の字でいびきをかくその姿に、あなたは明日も祈りを捧げることができるだろうか？</strong>
         </p>
+
+        <figure>
+            <img src="聖女泥酔01.png" alt="聖女泥酔スクープ記事">
+        </figure>
+
         <hr>
-        <h2>「ヒールじゃストレスは治せねえんだよ！」</h2>
-        <p>事件が起きたのは先週末の深夜2時。王都でも治安が悪いとされる歓楽街の裏路地だ。
-            「うわぁああん！ もうやだぁあ！ 王子も宰相も、みんな私にばっかり仕事押し付けてぇえ！」</p>
-        <p>静まり返った路地に、可愛らしい（しかし呂律の回っていない）絶叫が響き渡った。
-            そこにいたのは、なんと聖女エイラその人である。
-            普段の清楚な微笑みはどこへやら、彼女は安酒の空き瓶（度数40%のドワーフ火酒）を抱きしめ、石畳の上にゴロゴロと転がっていた。</p>
-        <h2>必死の隠蔽工作を図る側近</h2>
-        <p>「エイラ様！ お願いですから起きてください！ ここで見られたら終わりです！」
-            「うるさい！ 私はここで寝るの！ 大地とお友達になるの！」</p>
-        <p>青ざめた顔で彼女を引きずり起こそうとしているのは、聖女の筆頭護衛騎士であるＢ氏だ。
-            彼は通りかかった本誌記者に気づくと、鬼の形相で駆け寄ってきた。</p>
-        <p><strong>「見なかったことにしろ！ 金なら払う！ 記事にしたら貴様らの出版社ごと焼き払うぞ！」</strong>
-            （※この時のＢ氏の恫喝音声は、本誌Web版の付録魔道具で再生可能です）</p>
-        <h2>ストレスの限界か？</h2>
-        <p>聖女に近い関係者はこう語る。
-            「最近のエイラ様は限界でした。連日の治癒活動に加え、王太子殿下との婚約破棄騒動や、派閥争いの矢面に立たされて……。『もう聖女辞めたい』『オークの嫁になりたい』と漏らすこともありました」</p>
-        <p>翌日、教会は「聖女様は悪魔の呪いを受けた可哀想な方を見舞いに行き、その際に瘴気に当てられて倒れられた」という苦しい公式発表を行った。
-            しかし、あの夜、彼女が叫んでいた<strong>「王子のバカちんがぁああ！」</strong>という言葉は、果たして瘴気のせいだったのだろうか。</p>
-        <p>信者の信仰心が試される一枚となっている。</p>
-        <p>（文・王都芸能班）</p>
+        <h2>「ヒールじゃ……ヒック！ ストレスは癒せねえんだよぉおお！」</h2>
+        <p>草木も眠る丑三つ時。王都の掃き溜め、治安最悪とされる歓楽街「暗黒通り」の最奥部で、その事件は起きた。
+            腐った果実とドブネズミの死骸が転がるような裏路地に、場違いなほど神聖な、しかし酷く呂律の回っていない乙女の絶叫が響き渡った。</p>
+        <p>「うっ……うう……王子も宰相もバカばっかりぃ！ 私をなんだと思ってるの！ 高級ポーション製造機じゃないんだからぁ！」</p>
+        <p>そこにいたのは、紛れもなく聖女エイラその人である。
+            普段は純白の法衣に身を包み、慈愛に満ちた微笑みで民衆を癒やす彼女。だが、レンズ越しに映る姿はあまりにも無惨だった。
+            法衣は泥と正体不明の液体で薄汚れ、その手には庶民御用達の激安酒「ドラゴン殺し（アルコール度数96%、通称『飲む爆薬』）」の空き瓶がしっかりと握りしめられている。</p>
+        <p>彼女は石畳の冷たさを愛でるかのように、ゴロゴロと転がりながら、虚空に向かって管を巻き続けていた。
+            「なんですか『聖女はうんこしない』って……するよ！ 人間だもの！ なんなら今ここでしたろーか！？」</p>
+        <p>さらに衝撃的な光景が続く。彼女は懐から最高級の「万能解毒ポーション（エリクサー級）」を取り出すと、震える手で栓を抜き、一気に煽ったのだ。
+            「これで……今日の罪は……ぜんぶチャラ……！」
+            しかし、アルコールとエリクサーの同時摂取は、魔力回路に甚大な負荷をかける禁忌の組み合わせ。次の瞬間、彼女は「うぷっ……おろろろろろろ」と、虹色に輝く吐瀉物を撒き散らした。
+            「キラキラしてる……私のゲロ、宝石みたい……綺麗……」
+            そう言って意識を手放すその姿は、ある意味で神々しくさえあった。</p>
+
+        <hr>
+
+        <figure>
+            <img src="ドラゴン殺し.png" alt="ドラゴン殺し">
+            <figcaption>【本日の凶器】激安酒「ドラゴン殺し」</figcaption>
+        </figure>
+        <p>アルコール度数96%。通称「飲む火種」。一口で喉が焼け、二口で理性が飛び、三口で神に会えると言われる劇物。本来はドワーフが凍死寸前の時にのみ使用を許可される。</p>
+
+        <figure>
+            <img src="万能ポーション.png" alt="万能ポーション">
+            <figcaption>【本日の無駄遣い】万能解毒ポーション（エリクサー級）</figcaption>
+        </figure>
+        <p>国宝級の解毒薬。致死性の猛毒すら瞬時に中和するが、二日酔いに使うなど金貨をドブに捨てるごとき暴挙。無駄に虹色に発光しており、深夜の路地裏を怪しく照らしていた。</p>
+
+        <hr>
+
+        <h3>【編集部・極秘入手】 禁断の裏カクテル「聖女の休日（ホーリー・バケーション）」</h3>
+        <p>現場に残された空き瓶の比率から、彼女が愛飲していたと思われる狂気的なカクテルのレシピを再現した。</p>
+        <p><strong>【材料】</strong></p>
+        <ul>
+            <li>激安酒「ドラゴン殺し」：グラス9割</li>
+            <li>万能解毒ポーション：1割（チェイサー代わり）</li>
+        </ul>
+        <p><strong>【作り方】</strong></p>
+        <ol>
+            <li>「ドラゴン殺し」をグラスの表面張力ギリギリまで注ぐ。</li>
+            <li>「私の青春を返せ！」と叫びながら、ポーションを一気に混入する。</li>
+            <li>化学反応で虹色の爆煙が上がったら飲み頃。</li>
+        </ol>
+        <p><strong>【味と効能】</strong>
+            アルコールによる食道・内臓の破壊を、エリクサー成分が即座に「超回復」させることで、肉体が破壊と再生の無限ループに突入する。
+            この際、脳内に発生するドーパミンは致死量寸前。一口飲むだけで、悩みも将来への不安も、物理的にどうでもよくなる（IQが3になるため）。
+            「口の中で花火大会が起きてる」「神様が盆踊りしてるのが見える」など、被験者からはうわごとのような感想が寄せられた。
+            ※素人は即死するため、絶対に真似をしないこと。</p>
+
+        <hr>
+
+        <h2>必死の隠蔽工作を図る側近と、飛び交う怒号</h2>
+        <p>「エイラ様！ エイラ様！？ お願いですから死んだふりだけはやめてください！！ パンツ見えてます！ 聖女の神々しいパンツが見えてます！！」</p>
+        <p>顔面蒼白、冷や汗まみれで彼女の体をゆすっているのは、聖女親衛隊長の麗しき女騎士、Ｂ氏（24）だ。
+            「氷の剣姫」として名高い彼女だが、この時ばかりはただのパニックに陥った介護者でしかなかった。</p>
+        <p>「うるさい！ 私はここで寝るの！ 石畳の精霊とお友達になるの！ ママ～、地面が回ってるよぉ～」
+            「回りません！ 回っているのは貴方様の意識です！ さあ立ち上がってください！」</p>
+        <p>Ｂ氏は通りかかった本誌記者に気づくと、まるで魔王でも見たかのような鬼の形相で、聖剣の柄に手をかけながら詰め寄ってきた。</p>
+        <p><strong>「貴様！ どこのネズミだ！！ フィルムを出せ！ さもなくばこの私が貴様を物理的に浄化（消去）するぞ！！」</strong></p>
+        <p>（※この時のＢ氏の、騎士道精神のかけらもない恫喝音声は本誌Web版の付録魔道具で再生可能です。着信音に設定する読者が急増中！）</p>
+        <h2>目撃者の証言「魔獣かと思った」</h2>
+        <p>現場近くの酒場で飲んでいたドワーフの男性（56）は、当時の様子をこう語る。</p>
+        <p>「裏路地から『王子のバーカ！
+            耳の穴にゲロ詰め込んでやる！』っていう叫び声が聞こえてな。新手の魔獣かと思って覗いたら、聖女様が吐いてたんだよ。いやぁ、あの飲みっぷりは俺たちドワーフ顔負けだったね。『あと三本持ってこい！』って叫んでたぜ」</p>
+        <p>また、近隣の宿屋の女将（42）も証言する。
+            「最近よく見るよ、あの路地で飲んでる若い娘。フード被ってるから分かんなかったけど、まさか聖女様だったなんてねぇ……。『私の休みを返せ』『有給消化率ゼロパーセント』って呪詛みたいに呟いてたのが印象的だったわ」</p>
+        <h2>ストレスの限界か？ 聖女を追い詰める「ブラック聖務」</h2>
+        <p>聖女に近い教会関係者は、声を潜めてさらに深刻な内部事情を明かす。</p>
+        <p>「最近のエイラ様は限界でした。毎日の過重労働に加えて、あの王太子の"定期"婚約破棄騒動ですから。あの王子、発情期が来るたびに『真実の愛を見つけたから婚約破棄する』ってエイラ様を呼び出すんですよ。エイラ様も慣れた手つきで『はいはい、お幸せに』って慰謝料請求書を叩きつけるんですが……数日後には王子が泣きついて復縁するという、まさに無限ループなんです」
+        </p>
+        <p>さらに、関係者は王太子の<strong>衝撃的な秘密</strong>を暴露した。
+            「殿下、実はそこそこ進行した若ハゲなんです。エイラ様は毎朝、莫大な魔力を消費して殿下の頭皮に『毛根再生（リジェネ・フォリクル）』をかけてるんですが……殿下はそのフサフサになった髪をなびかせて、新しい女をナンパしに行くんですよ。『俺の髪、絹糸みたいだろう？』って」
+        </p>
+        <p>「その髪、誰の魔力で生えてると思ってんのよ！ 私の血と涙の結晶でナンパしてんじゃないわよ！」
+            路地裏に響いたあの絶叫は、あまりにも切実な魂の叫びだったのだ。</p>
+        <p>先日は『もう人間やめたい』『来世はダンジョンの苔になりたい。誰にも踏まれず、光も浴びず、ジメジメ生きたい』と、大聖堂の祭壇の前で虚ろな目で呟いていたという目撃情報もある。</p>
+        <p>翌日、教会は「聖女様は悪魔の呪いを受けた迷える子羊を救うため、自らその穢れを引き受けられた。現在、深い瞑想（二日酔い）に入られている」という、苦し紛れにもほどがある声明を発表。
+            だが、あの夜彼女が夜空に吐き捨てた<strong>「王子のピーマン頭ぁああ！ 中身空っぽかよ！ またハゲさせるぞ！」</strong>という罵倒は、果たして慈愛の精神からくるものだったのだろうか。</p>
+        <p>信じる者は救われる。しかし、この写真を見た後でも、あなたは彼女を「清廉潔白」と信じ続けられるだろうか。
+            本誌は引き続き、聖女の”人間臭すぎる”生態を追う予定だ。</p>
+
+        <hr>
+
+        <h3>【余談】王都（オウト）に蔓延る「オウト」の怪</h3>
+        <p>最近、王都の裏路地にて奇妙な新種スライムが発見された。
+            七色に輝く美しい流体だが、近づくと<strong>度数96%のアルコール臭</strong>が鼻をつく。さらに、触れたアンデッドを一瞬で浄化するほどの聖なる力を秘めているという。
+            冒険者たちはこの謎の生物を、発生源への"篤い信仰心"と敬意を込めてこう名付けた。</p>
+        <p><strong>「聖女のゲロ（ホーリー・スライム）」</strong></p>
+
+        <figure>
+            <img src="聖女のゲロ.png" alt="聖女のゲロ（ホーリー・スライム）">
+        </figure>
+
+        <p>まさに王都（オウト）がオウトに沈む……なんて駄洒落を言っている場合ではない。被害（主に悪臭）は拡大中だ。衛生局の早急な対応が待たれる。</p>
+
+        <hr>
+
+        <p>（文・王都芸能班　潜入担当／写真・隠密パパラッチ隊）</p>
     </article>
 </body>
 
