--- a/202603/聖騎士不倫.html
+++ b/202603/聖騎士不倫.html
@@ -22,15 +22,21 @@
         <p>G氏は既婚者。妻は法務官を務める貴族令嬢という逆玉（ぎゃくたま）エリートだった。
             清廉潔白で知られた彼だが、裏では王都の歓楽街、通称「裏ダンジョン」の常連だったという。</p>
         <p>お相手は、高級クラブ『夢魔の館』のNo.1キャスト、<strong>リリィ嬢（推定200歳・サキュバス）</strong>。</p>
+
+        <figure>
+            <img src="サキュバス01.png" alt="サキュバス01">
+        </figure>
+
         <p>関係者の証言は以下の通り。</p>
         <p><strong>G氏の部下</strong>
-            「最近、隊長の聖剣が妙に輝いてたんですよ。『これは愛の力だ』とか言ってましたけど、まさか吸われた（・・・・）後の余波だったとは」</p>
+            「最近、隊長の聖剣がやけに輝いてたんですよ。『日々の手入れの賜物だ』なんて自慢してましたけど、まさか<strong>そんなところ（・・・・・・）で磨いていた</strong>とは……」</p>
         <p><strong>クラブの黒服</strong>
-            「G様は太客でしたよ。いっつも『浄化してやる！』って叫びながら店に入ってくるんです。プレイの一環かと思ってたら、本当に聖水（教会認定品）を店内でブチまけてボヤ騒ぎになりまして……それで衛兵を呼ばれて御用です」</p>
+            「G様は太客でしたよ。いえ、股間的な意味ではなくて。いっつも『俺に浄化されたいやつは誰だ！』って叫びながら店に入ってくるんです。プレイの一環かと思ってたら、本当に<strong>教皇庁認定『聖酒イグニス（火の洗礼）』</strong>を店内でブチまけてボヤ騒ぎになりまして……それで衛兵を呼ばれて御用です」
+        </p>
         <h3>■ 現場からの逃走劇</h3>
         <p>逮捕時の醜態も酷かった。
             衛兵が踏み込んだ際、G氏は全裸（フルプレートの兜のみ着用）で窓から飛び降り、
-            <strong>「これは潜入捜査だ！ 俺は闇を払っていたんだ！」</strong>
+            <strong>「道を開けろ！ 俺の聖剣（さきっぽ）が新たな扉（ゲート）を指し示しているんだぁああ！！」</strong>
             と叫びながら、王都のメインストリートを疾走。
             その姿が多数の市民に目撃され、あえなく物理的に捕獲された。
         </p>
