feat: Create style.css with comprehensive styling for article layout and components.

--- a/202603/聖騎士不倫.html
+++ b/202603/聖騎士不倫.html
@@ -40,14 +40,70 @@
             と叫びながら、王都のメインストリートを疾走。
             その姿が多数の市民に目撃され、あえなく物理的に捕獲された。
         </p>
-        <h3>■ 奥様のコメント</h3>
-        <p><strong>G氏の妻（法務官）</strong>
-            「彼には、これから法廷という名の本当のダンジョンを味わってもらいます。<strong>帰還（リターン）の魔法は許可しません</strong>」</p>
+        <h3>■ 激怒する法務官の妻「慰謝料は王都一つ分」</h3>
+        <p>本誌は特例として、現在G氏の財産をすべて凍結し、「実家からの追放」と「徹底的な社会的制裁」の準備を進めているG氏の妻（王都高等法務官・A子さん）への直撃インタビューに成功した。</p>
+
+        <figure>
+            <img src="法務官の妻.png" alt="法廷に立つG氏の妻（法務官）">
+            <figcaption>▲「聖剣の無断使用は重罪です」と語るA子さん</figcaption>
+        </figure>
+
+        <div class="dialogue">
+            <p class="speaker-editor">記者：</p>
+            <p class="speech">ーー旦那様の報道を知った際の率直なお気持ちは？</p>
+        </div>
+        <div class="dialogue">
+            <p class="speaker-guest">A子さん：</p>
+            <p class="speech">
+                「呆れを通り越して、感心しました。まさか彼が夜のダンジョンで、あのような“物理的（フィジカル）な”大立ち回りをする勇気があったとは。普段は手動の罠（トラップ）一つ解除できない男ですからね」</p>
+        </div>
+        <div class="dialogue">
+            <p class="speaker-editor">記者：</p>
+            <p class="speech">ーーG氏は『聖剣の性能テストだった』と供述していますが……。</p>
+        </div>
+        <div class="dialogue">
+            <p class="speaker-guest">A子さん：</p>
+            <p class="speech">
+                「ええ、その言い訳は法廷でじっくり聞かせてもらいます。彼にはこれから、私服を肥やし、我が家の名誉に泥を塗った代償として、<strong>法廷という名の本当の地獄（ダンジョン）</strong>を味わってもらいます」
+            </p>
+        </div>
+        <div class="dialogue">
+            <p class="speaker-editor">記者：</p>
+            <p class="speech">ーーダンジョンですか。手強いレイドボスになりそうですね。</p>
+        </div>
+        <div class="dialogue">
+            <p class="speaker-guest">A子さん：</p>
+            <p class="speech">「（氷のような微笑を浮かべて）慰謝料は王都一つ分。もちろん、<strong>帰還（リターン）の魔法は許可しません</strong>」</p>
+        </div>
         <hr>
         <p><strong>【編集部の目】</strong>
             聖騎士団の不祥事は今年で3件目。
             「英雄色を好む」と言うが、色が濃すぎて社会的に死んでは世話がない。
             なお、G氏の装備していた「聖剣」は妻の実家からの貸与品だったため、このあと没収される予定。まさに身も心も装備もスッポンポンである。</p>
+
+        <!-- 求人広告: 夢魔の館 -->
+        <aside class="job-ad">
+            <h3 class="job-ad-header">
+                <span>急募</span>高級クラブ『夢魔の館』キャスト大募集！
+            </h3>
+
+            <figure style="margin: 0 0 20px 0; text-align: center;">
+                <img src="夢魔の館求人.png" alt="夢魔の館 キャスト募集" style="max-width: 100%; height: auto; border-radius: 8px;">
+            </figure>
+
+            <div class="job-ad-content">
+                <p><strong>「聖騎士も虜にする極上の接客スキル、身につけませんか？」</strong></p>
+                <p>当館は王都随一の知名度と実績を誇るアットホームな職場です。未経験者、異世界からの転生者大歓迎！サキュバス、エルフ、魔族など種族は問いません。</p>
+                <ul class="job-ad-list">
+                    <li>【給与】時給5,000G～ ＋ 歩合制（指名料全額バック！）</li>
+                    <li>【待遇】日払い可、寮完備（ダンジョン直結）、聖騎士の浄化魔法対策研修あり</li>
+                    <li>【その他】ノルマなし！あなたの「魅了（チャーム）」スキルを最大限に活かせます。</li>
+                </ul>
+            </div>
+            <div class="job-ad-footer">
+                お問い合わせは王都歓楽街・第4裏路地『夢魔の館』採用担当まで！
+            </div>
+        </aside>
     </article>
 </body>
 
